Correction faite sur le loader en changeant z-index sur -1 et non auto; corriger lanimation sur le bouton avec un brigthness

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,10 +6,10 @@
     z-index: 9999;
   }
   100% {
-    display: none;
-    z-index: auto;
-    background-color: transparent;
     opacity: 0;
+    display: none;
+    z-index: -1;
+    background-color: transparent;
   }
 }
 /* Animation de rotation du loader */
@@ -30,6 +30,7 @@
     opacity: 0;
   }
 }
+/* Animation d'apparition du menu par la gauche */
 @keyframes slideInFromLeft {
   0% {
     transform: translateX(-100%);
@@ -38,6 +39,7 @@
     transform: translateX(0);
   }
 }
+/* Animation d'apparition du menu par la droite*/
 @keyframes slideInFromRight {
   0% {
     transform: translateX(100%);
@@ -53,10 +55,10 @@
     z-index: 9999;
   }
   100% {
-    display: none;
-    z-index: auto;
-    background-color: transparent;
     opacity: 0;
+    display: none;
+    z-index: -1;
+    background-color: transparent;
   }
 }
 /* Animation de rotation du loader */
@@ -77,6 +79,7 @@
     opacity: 0;
   }
 }
+/* Animation d'apparition du menu par la gauche */
 @keyframes slideInFromLeft {
   0% {
     transform: translateX(-100%);
@@ -85,6 +88,7 @@
     transform: translateX(0);
   }
 }
+/* Animation d'apparition du menu par la droite*/
 @keyframes slideInFromRight {
   0% {
     transform: translateX(100%);
@@ -243,9 +247,9 @@ a {
   cursor: pointer;
 }
 .button:hover {
-  background: linear-gradient(0deg, #ff79da 0%, #9356dc 100%);
   background-color: #ff79da;
   box-shadow: 0.2rem 0.2rem 1rem rgba(0, 0, 0, 0.623);
+  filter: brightness(115%);
 }
 
 .section__location {
@@ -337,12 +341,18 @@ a {
   font-size: 0.88638rem;
   font-weight: 500;
 }
+.section__fonctionnement .section__fonctionnement__etape .fonctionnement__etape .container__icon__etape {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 20px;
+  width: 15px;
+  margin: 30px;
+}
 .section__fonctionnement .section__fonctionnement__etape .fonctionnement__etape .icon-etape {
-  margin-left: 2.09rem;
   color: #7E7E7E;
 }
 .section__fonctionnement .section__fonctionnement__etape .fonctionnement__etape .resto {
-  margin-left: 2.09rem;
   color: #9356dc;
 }
 .section__fonctionnement .section__fonctionnement__etape .fonctionnement__etape h2 {
